Add deployment directory to repository
- Remove deployment/ from .gitignore
- Add all deployment configuration files
- Include Dockerfiles, docker-compose.yml, scripts
- Fix GitHub Actions deployment by ensuring deployment directory exists

--- a/.gitignore
+++ b/.gitignore
@@ -50,5 +50,6 @@ vite.config.ts.timestamp-*
 *.tmp
 *.temp
 
-# Deployment (manual transfer to server)
-deployment/
+# Deployment logs only (keep deployment config files)
+deployment/logs/
+deployment/ssl/
