Fix Docker build issues and nginx configuration
- Remove problematic COPY command in Dockerfile.frontend
- Fix nginx service name from 'backend' to 'api' in nginx.conf
- Simplify nginx user permissions
- Let docker-compose handle nginx.conf as volume mount

--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -20,7 +20,7 @@ http {
 
         # API proxy to backend
         location /api/ {
-            proxy_pass http://backend:3001;
+            proxy_pass http://api:3001;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -29,7 +29,7 @@ http {
 
         # Health check proxy
         location /health {
-            proxy_pass http://backend:3001;
+            proxy_pass http://api:3001;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
