--- a/deployment/Dockerfile.frontend
+++ b/deployment/Dockerfile.frontend
@@ -37,21 +37,10 @@ RUN rm /etc/nginx/conf.d/default.conf
 # Copy built files to nginx
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Copy custom nginx configuration
-COPY ../deployment/nginx.conf /etc/nginx/conf.d/default.conf
+# Note: nginx.conf will be mounted as volume from docker-compose.yml
 
-# Create nginx user and set permissions
-RUN addgroup -g 1001 -S nginx-app && \
-    adduser -S nginx-app -u 1001 -G nginx-app
-
-# Set proper permissions
-RUN chown -R nginx-app:nginx-app /usr/share/nginx/html && \
-    chown -R nginx-app:nginx-app /var/cache/nginx && \
-    chown -R nginx-app:nginx-app /var/log/nginx && \
-    chown -R nginx-app:nginx-app /etc/nginx/conf.d
-
-# Switch to non-root user
-USER nginx-app
+# Set proper permissions for nginx
+RUN chown -R nginx:nginx /usr/share/nginx/html
 
 # Expose ports
 EXPOSE 80 443
