--- a/deployment/Dockerfile.backend
+++ b/deployment/Dockerfile.backend
@@ -1,4 +1,35 @@
 # Backend Dockerfile - Ubuntu 24 Ready
+FROM node:22-alpine3.20 as builder
+
+# Install system dependencies
+RUN apk add --no-cache \
+    curl \
+    postgresql-client \
+    tzdata \
+    ca-certificates
+
+# Set timezone
+ENV TZ=UTC
+
+# Create app directory
+WORKDIR /app
+
+# Copy package files
+COPY package*.json ./
+
+# Install ALL dependencies (including dev) for building
+RUN npm ci --ignore-scripts
+
+# Copy source code
+COPY . .
+
+# Generate Prisma client
+RUN npx prisma generate
+
+# Build the application
+RUN npm run build
+
+# Production stage
 FROM node:22-alpine3.20
 
 # Install system dependencies
@@ -17,17 +48,15 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies with npm ci for production
+# Install only production dependencies
 RUN npm ci --omit=dev --ignore-scripts
 
-# Copy source code
-COPY . .
+# Copy built application from builder stage
+COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
 
-# Generate Prisma client
-RUN npx prisma generate
-
-# Build the application
-RUN npm run build
+# Copy prisma schema for migrations
+COPY prisma ./prisma
 
 # Create non-root user
 RUN addgroup -g 1001 -S nodejs && \
