--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "db:generate": "npx prisma generate",
     "db:migrate": "npx prisma migrate dev",
     "db:studio": "npx prisma studio",
+    "seed": "npx ts-node scripts/seed-database.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
