--- a/deployment/Dockerfile.backend
+++ b/deployment/Dockerfile.backend
@@ -27,7 +27,11 @@ COPY . .
 RUN npx prisma generate
 
 # Build the application
-RUN npm run build
+RUN npm run build && \
+    echo "Build completed, checking dist folder:" && \
+    ls -la dist/ && \
+    echo "dist/server.js exists:" && \
+    test -f dist/server.js && echo "YES" || echo "NO"
 
 # Production stage
 FROM node:22-alpine3.20
@@ -54,6 +58,12 @@ RUN npm ci --omit=dev --ignore-scripts
 # Copy built application from builder stage
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
+
+# Debug: Check what was copied
+RUN echo "Production stage - checking copied files:" && \
+    ls -la dist/ && \
+    echo "dist/server.js exists:" && \
+    test -f dist/server.js && echo "YES" || echo "NO"
 
 # Copy prisma schema for migrations
 COPY prisma ./prisma
