--- a/deployment/Dockerfile.backend
+++ b/deployment/Dockerfile.backend
@@ -27,11 +27,7 @@ COPY . .
 RUN npx prisma generate
 
 # Build the application
-RUN npm run build && \
-    echo "Build completed, checking dist folder:" && \
-    ls -la dist/ && \
-    echo "dist/server.js exists:" && \
-    test -f dist/server.js && echo "YES" || echo "NO"
+RUN npm run build
 
 # Production stage
 FROM node:22-alpine3.20
@@ -59,11 +55,6 @@ RUN npm ci --omit=dev --ignore-scripts
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
 
-# Debug: Check what was copied
-RUN echo "Production stage - checking copied files:" && \
-    ls -la dist/ && \
-    echo "dist/server.js exists:" && \
-    test -f dist/server.js && echo "YES" || echo "NO"
 
 # Copy prisma schema for migrations
 COPY prisma ./prisma
@@ -72,8 +63,11 @@ COPY prisma ./prisma
 RUN addgroup -g 1001 -S nodejs && \
     adduser -S nutritrack -u 1001
 
-# Change ownership of the app directory
+# Change ownership of the app directory  
 RUN chown -R nutritrack:nodejs /app
+
+# Ensure working directory is correct
+WORKDIR /app
 
 # Switch to non-root user
 USER nutritrack
