--- a/deployment/Dockerfile.backend
+++ b/deployment/Dockerfile.backend
@@ -1,35 +1,4 @@
-# Backend Dockerfile - Ubuntu 24 Ready
-FROM node:22-alpine3.20 as builder
-
-# Install system dependencies
-RUN apk add --no-cache \
-    curl \
-    postgresql-client \
-    tzdata \
-    ca-certificates
-
-# Set timezone
-ENV TZ=UTC
-
-# Create app directory
-WORKDIR /app
-
-# Copy package files
-COPY package*.json ./
-
-# Install ALL dependencies (including dev) for building
-RUN npm ci --ignore-scripts
-
-# Copy source code
-COPY . .
-
-# Generate Prisma client
-RUN npx prisma generate
-
-# Build the application
-RUN npm run build
-
-# Production stage
+# Backend Dockerfile - Ubuntu 24 Ready - Single Stage
 FROM node:22-alpine3.20
 
 # Install system dependencies
@@ -48,16 +17,20 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
-# Install only production dependencies
-RUN npm ci --omit=dev --ignore-scripts
+# Install ALL dependencies first
+RUN npm ci --ignore-scripts
 
-# Copy built application from builder stage
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
+# Copy source code
+COPY . .
 
+# Generate Prisma client
+RUN npx prisma generate
 
-# Copy prisma schema for migrations
-COPY prisma ./prisma
+# Build the application
+RUN npm run build
+
+# Remove dev dependencies to save space
+RUN npm prune --omit=dev
 
 # Create non-root user
 RUN addgroup -g 1001 -S nodejs && \
@@ -65,9 +38,6 @@ RUN addgroup -g 1001 -S nodejs && \
 
 # Change ownership of the app directory  
 RUN chown -R nutritrack:nodejs /app
-
-# Ensure working directory is correct
-WORKDIR /app
 
 # Switch to non-root user
 USER nutritrack
