--- a/deployment/Dockerfile.backend
+++ b/deployment/Dockerfile.backend
@@ -32,6 +32,9 @@ RUN npm run build
 # Remove dev dependencies to save space
 RUN npm prune --omit=dev
 
+# Verify build output exists
+RUN ls -la dist/ && test -f dist/server.js
+
 # Create non-root user
 RUN addgroup -g 1001 -S nodejs && \
     adduser -S nutritrack -u 1001
@@ -49,5 +52,5 @@ EXPOSE 3001
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
   CMD curl -f http://localhost:3001/health || exit 1
 
-# Start the application
-CMD ["npm", "start"]
+# Start the application - use absolute path
+CMD ["node", "/app/dist/server.js"]
