Improve database seeding strategy for production deployment
- Modified seed-database.ts to check existing data before seeding
- Added reset-database.ts script for forced database reset
- Added npm scripts: seed:reset for complete database reset
- Smart seeding preserves existing data between deployments
- Only seeds empty databases to avoid data loss
- Updated GitHub Actions workflow with better seeding feedback

Usage:
- npm run seed: Seeds only if database is empty
- npm run seed:reset: Clears all data and reseeds

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,8 +70,9 @@ jobs:
         # Run database migrations
         docker-compose exec -T api npx prisma migrate deploy || true
         
-        # Seed database
-        docker-compose exec -T api npm run seed || echo "Database seeding skipped"
+        # Seed database (only if empty)
+        echo "Seeding database with mock data..."
+        docker-compose exec -T api npm run seed || echo "Database seeding skipped or failed"
         
         # Show running containers
         docker-compose ps
