feat: Enhance frontend HTTPS support with smart environment detection
- Add environment utility functions for HTTPS detection
- Update API configuration to automatically use HTTPS in production
- Enhanced error handling for SSL/HTTPS issues
- Add timeout configuration for API requests
- Improve request logging with protocol information
- Update environment examples with HTTPS options
- Smart API URL detection based on environment

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,8 @@
+# For local development with HTTP
 VITE_API_URL=http://localhost:3001/api
+
+# For local development with HTTPS
+# VITE_API_URL=https://localhost/api
+
+# For production (uses relative path by default)
+# VITE_API_URL=/api
