--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,17 @@
-PORT=3001
-DATABASE_URL="postgresql://username:password@localhost:5432/nutrition_db"
-JWT_SECRET="your-jwt-secret-here"
+# Database
+DATABASE_URL="postgresql://nutritrack:your-password@localhost:5432/nutrition_db"
+
+# JWT
+JWT_SECRET="your-super-secret-jwt-key-change-in-production"
+JWT_EXPIRES_IN="7d"
+
+# Google OAuth (Development)
+GOOGLE_CLIENT_ID="your-google-client-id.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
+
+# Frontend URL for OAuth redirects
+FRONTEND_URL="http://localhost:5173"
+
+# Environment
 NODE_ENV="development"
+PORT=3001
