--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.81.5",
     "axios": "^1.10.0",
+    "js-cookie": "^3.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
