fix: Add Google OAuth environment variables to production deployment
- Export GOOGLE_CLIENT_ID, GOOGLE_CLIENT_SECRET, and JWT_SECRET from GitHub secrets
- Pass environment variables to API container in docker-compose
- Add FRONTEND_URL for OAuth callbacks
- Fixes 'Unknown authentication strategy google' error

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,6 +88,9 @@ jobs:
         export NODE_ENV=production
         export PORT=3001
         export DOMAIN_NAME="${{ secrets.DOMAIN_NAME }}"
+        export GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}"
+        export GOOGLE_CLIENT_SECRET="${{ secrets.GOOGLE_CLIENT_SECRET }}"
+        export JWT_SECRET="${{ secrets.JWT_SECRET }}"
         
         # Set API URL based on domain configuration
         if [ -n "${{ secrets.DOMAIN_NAME }}" ]; then
