--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,7 +81,7 @@ jobs:
         fi
         
         # Stop existing containers (but preserve volumes)
-        docker-compose down || true
+        docker compose down || true
         
         # Export environment variables for docker-compose
         export DB_PASSWORD="${{ secrets.DB_PASSWORD }}"
@@ -110,7 +110,7 @@ jobs:
         fi
         
         # Build and start services with environment variables
-        docker-compose up -d --build
+        docker compose up -d --build
         
         # Ensure Let's Encrypt certificates are preserved
         if [ -n "${{ secrets.DOMAIN_NAME }}" ] && [ -d "letsencrypt/live/${{ secrets.DOMAIN_NAME }}" ]; then
@@ -124,17 +124,17 @@ jobs:
         sleep 30
         
         # Run database migrations
-        docker-compose exec -T api npx prisma migrate deploy || true
+        docker compose exec -T api npx prisma migrate deploy || true
         
         # Seed database (only if empty)
         echo "Seeding database with mock data..."
-        docker-compose exec -T api npm run seed || echo "Database seeding skipped or failed"
+        docker compose exec -T api npm run seed || echo "Database seeding skipped or failed"
         
         # Show running containers
-        docker-compose ps
+        docker compose ps
         
         # Show logs for debugging
-        docker-compose logs --tail=50
+        docker compose logs --tail=50
         
         EOF
         
