--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -92,6 +92,14 @@ jobs:
         export GOOGLE_CLIENT_SECRET="${{ secrets.GOOGLE_CLIENT_SECRET }}"
         export JWT_SECRET="${{ secrets.JWT_SECRET }}"
         
+        # Debug: Check if secrets are available (mask sensitive data)
+        echo "🔍 Checking GitHub secrets availability:"
+        echo "DB_PASSWORD: ${DB_PASSWORD:+SET}"
+        echo "DOMAIN_NAME: ${DOMAIN_NAME:+SET}"
+        echo "GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID:+SET}"
+        echo "GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET:+SET}"
+        echo "JWT_SECRET: ${JWT_SECRET:+SET}"
+        
         # Create .env file for docker-compose
         cat > .env << ENVEOF
 DOMAIN_NAME=${DOMAIN_NAME}
