--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -92,10 +92,10 @@ jobs:
         export GOOGLE_CLIENT_SECRET="${{ secrets.GOOGLE_CLIENT_SECRET }}"
         export JWT_SECRET="${{ secrets.JWT_SECRET }}"
         
-        # Set default values for missing environment variables
-        export GOOGLE_CLIENT_ID="${GOOGLE_CLIENT_ID:-1035382330796-61mjs4fsv3c35gkhenjhiq81lp0n13jt.apps.googleusercontent.com}"
-        export GOOGLE_CLIENT_SECRET="${GOOGLE_CLIENT_SECRET:-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}"
-        export JWT_SECRET="${JWT_SECRET:-super-secret-jwt-key-for-production}"
+        # Set OAuth credentials (hardcoded until GitHub secrets are fixed)
+        export GOOGLE_CLIENT_ID="1035382330796-61mjs4fsv3c35gkhenjhiq81lp0n13jt.apps.googleusercontent.com"
+        export GOOGLE_CLIENT_SECRET="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"
+        export JWT_SECRET="super-secret-jwt-key-for-production"
         
         # Create .env file for docker-compose
         echo "DOMAIN_NAME=${DOMAIN_NAME}" > .env
