--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -93,12 +93,14 @@ jobs:
         export JWT_SECRET="${{ secrets.JWT_SECRET }}"
         
         # Create .env file for docker-compose
-        echo "DOMAIN_NAME=${DOMAIN_NAME}" > .env
-        echo "DB_PASSWORD=${DB_PASSWORD}" >> .env
-        echo "GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}" >> .env
-        echo "GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}" >> .env
-        echo "JWT_SECRET=${JWT_SECRET}" >> .env
-        echo "VITE_API_URL=/api" >> .env
+        cat << EOF > .env
+        DOMAIN_NAME=${{ secrets.DOMAIN_NAME }}
+        DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+        GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
+        GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
+        JWT_SECRET=${{ secrets.JWT_SECRET }}
+        VITE_API_URL=/api
+        EOF
         
         
         # Set API URL based on domain configuration
