--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -93,14 +93,14 @@ jobs:
         export JWT_SECRET="${{ secrets.JWT_SECRET }}"
         
         # Create .env file for docker-compose
-        cat > .env << 'ENVEOF'
-DOMAIN_NAME=${{ secrets.DOMAIN_NAME }}
-DB_PASSWORD=${{ secrets.DB_PASSWORD }}
-GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
-GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
-JWT_SECRET=${{ secrets.JWT_SECRET }}
-VITE_API_URL=/api
-ENVEOF
+        {
+          echo "DOMAIN_NAME=${{ secrets.DOMAIN_NAME }}"
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}"
+          echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}"
+          echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}"
+          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}"
+          echo "VITE_API_URL=/api"
+        } > .env
         
         
         # Set API URL based on domain configuration
