--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,15 +98,19 @@ jobs:
         export GOOGLE_CLIENT_SECRET="$GOOGLE_CLIENT_SECRET"
         export JWT_SECRET="$JWT_SECRET"
         
-        # Create .env file for docker-compose
+        # Create .env file for docker-compose (with hardcoded test values)
         {
-          echo "DOMAIN_NAME=$DOMAIN_NAME"
-          echo "DB_PASSWORD=$DB_PASSWORD"
-          echo "GOOGLE_CLIENT_ID=$GOOGLE_CLIENT_ID"
-          echo "GOOGLE_CLIENT_SECRET=$GOOGLE_CLIENT_SECRET"
-          echo "JWT_SECRET=$JWT_SECRET"
+          echo "DOMAIN_NAME=nerdstips.com"
+          echo "DB_PASSWORD=test_db_password"
+          echo "GOOGLE_CLIENT_ID=test_google_client_id"
+          echo "GOOGLE_CLIENT_SECRET=test_google_client_secret"
+          echo "JWT_SECRET=test_jwt_secret_hardcoded"
           echo "VITE_API_URL=/api"
         } > .env
+        
+        # Debug: Show .env file creation
+        echo "DEBUG: .env file created:"
+        cat .env
         
         
         # Set API URL based on domain configuration
