--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -101,10 +101,10 @@ jobs:
         export GOOGLE_CLIENT_SECRET="$GOOGLE_CLIENT_SECRET"
         export JWT_SECRET="$JWT_SECRET"
         
-        # Create .env file for docker-compose (testing with two real variables)
+        # Create .env file for docker-compose (testing with one real variable)
         {
           echo "DOMAIN_NAME=$DOMAIN_NAME"
-          echo "DB_PASSWORD=$DB_PASSWORD"
+          echo "DB_PASSWORD=test_db_password"
           echo "GOOGLE_CLIENT_ID=test_google_client_id"
           echo "GOOGLE_CLIENT_SECRET=test_google_client_secret"
           echo "JWT_SECRET=test_jwt_secret_hardcoded"
